style.css
html{
    scroll-behavior: smooth;
}
body{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    
    
}
*{
    box-sizing: border-box;
    overflow-x: hidden;
   
}

.container{
    background-color: rgb(246, 240, 240);
   
    
    
   
}
.section1{
    display: grid;
    grid-template-columns: 90% 10%;
    grid-template-rows: 10% 90%;
   
   
   
}

.section1 header{
    margin: 0;
    grid-area: 1 / 1 / 2 / 2;
    padding: 1rem;
    overflow: visible;
   
    

   
}
.section1 header h2{
    margin: 0;
    font-weight: 600;
    font-size: 34px;
    font-family: 'Courier New', Courier, monospace;
    color: rgb(3 , 3, 2);
    margin: 1rem;
}
.section1 header .name1{
    margin: 0;
    border-bottom: 2px solid black;
}
.section1 header .name2{
    padding-left: 6rem;
    margin: 0;
}


.main{
    display: flex;
    grid-area: 2 / 1 / 3 /2  ;
    padding: 4rem;
   
  

}

.main .text {
  text-align: justify;
  font-size: 18px;
  font-weight: 600;
  font-family: 'Courier New', Courier, monospace;
  color: rgb(0, 0, 0);
  width: 30rem;
  display: flex;
  align-items: center;
  padding: 5rem;

}
.main .image{
    display: flex;
    flex-direction: column;
    width: 400px;
    height:  400px;
    position: relative;
    text-align: center;
    transition: all ease-in-out 0.3s;
    
}

.main img{
 max-width: 100%;
 height: auto;
 background-color: transparent;
}
.main .image:hover{
    transform: scale(1.3);
    
}
.main .mainText{
    color: rgb(0, 0, 0);
    margin-left: 3rem;
    margin-bottom: 3rem;
    font-size: 30px;
    font-family: sans-serif;
    font-weight: 800;
    position: absolute;
    top: 70%;
    left:70%;
    transform: translate(-50%, -50%);
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
    
}

#sidebar2{
    display: none;
}
.menu-container{
    display: none;
}
.sidebar{
    position: fixed;
    right: 0;
    display: flex;
    flex-direction: column;
    gap: 2rem;
    top: 36px;
    z-index: 1000;
    position: -webkit-sticky;
    

}

.sidebar a button{
    font-size: 18px;
    font-weight: 400;
    background-color: transparent;
    border-radius: 30px;
    border: 2px solid black;
    padding: 10px;
    width: 8rem;
    
    
}

.sidebar button:hover{
    transform: translateX(-20px);
    transition: 0.1s;
}

.section2{
    display: flex;
    flex-direction: column;
    padding: 3rem;
    overflow: hidden;
   }
.section2 .text1{
    color: rgb(0, 0, 0);
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
    font-size: 40px;
    font-family: sans-serif;
    font-weight: 800;
}
.section2 .line{
    border-bottom: 2px solid black;

}
.section2 .main{
    padding: 3rem;
    margin-right: 6rem;
}

.section2 .text2{
    font-size: 30px;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;

}
.section2 .text3{
     font-size: 25px;
     font-weight: 800;
}
.section2 ul{
    gap: 2rem;
}

.section2 .line2{
    height: 500px;
    width: 10px;
    border-left: 2px solid black;
    margin: 2rem;
}

.section2 .text4{
    font-size: 30px;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;

}
.section2 .text5{
     font-size: 25px;
     font-weight: 800;
}
.section2 ul li{
    font-size: 23px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    text-align: justify;
}
.section3 .text1{
    color: rgb(0, 0, 0);
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
    font-size: 40px;
    font-family: sans-serif;
    font-weight: 800;
    display: flex;
    justify-content: center;
}
.section3 .line{
    border-top: 2px solid black;
}
.section3 .text2{
    font-size: 20px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    display: flex;
    justify-content: center;
}
.section3 .image{
    margin: 100px 0 0 250px;
    width: 70%;
    height: 350px;
    display: flex;
    justify-content: center;
    gap: 10px;
    overflow: visible;
}
.section3 .image p{
    display: none;
}
.section3 .image img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 10px;
    border: 2px solid white;
    transition: all ease-in-out 0.5s;
}
.section3 .image img:hover{
    color: rgb(108, 108, 108);
    transform: scale(1.4);
}
.section3 .part2{
    display: flex;
    gap: 3rem;
    padding: 8rem;
    align-items: center;
    flex-direction: column;
}
.section3 .text3{
    font-size: 30px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    text-align: center;
    

}
.section3 .part2 img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 10px;
    border: 2px solid white;
    transition: all ease-in-out 0.5s;
}
.section3 .part2 img:hover{
    color: rgb(108, 108, 108);
    transform: scale(1.4);
}

.main1{
    display: flex;
    
    padding: 4rem;
    gap: 3rem;
}
.section4 .text1{
   font-size: 30rem;
   font-weight: bold;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   margin: 0;
}
.section4 .texts {
    font-size: 40px;
    display: flex;
    flex-direction: column;
    gap: 3rem;
    padding-top: 5rem;
}
.section4 .texts p{
    margin: 0;

}
.section4 .main2{
    display: flex;
    padding: 5rem;
   gap: 3rem;
}
.section4 .main2 p{
    font-size: 25px;
    text-align: justify;
    border: 2px solid black;
    border-radius: 20px;
    font-weight: bolder;
    padding: 3rem;
    transition: all ease-in-out 0.3s;
}
.section4 .main2 p:hover{
    transform: translateY(-40px);
}




.section5 .part{
    display: flex;
    gap: 6rem;
    padding: 5rem;
}
.section5 .button{
    display: flex;
    justify-content: center;
    align-items: center;
    transition: all ease-in-out 0.3s;
}
.section5 .button a{
    text-decoration: none;
}
.section5 button{
    background-color: rgb(230, 231, 232);
    border-radius: 30px;
    padding: 1rem;
    border: 1px solid black;
    display: flex;
    align-items: center;
}
/* ... */

